Small change escape function, fixed loader spacing

--- a/styles/blog-post.css
+++ b/styles/blog-post.css
@@ -2,6 +2,10 @@
     padding-bottom: 100px;
 }
 
+.blog-post-container .loader {
+    margin-top: 40px;
+}
+
 h1 {
     margin: 0;
     padding: 40px 0 15px 0;
